--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs">
 <head>
 <meta charset="utf-8">
 <title>Kotelna – Attack FD 25</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 *{box-sizing:border-box}
-body{margin:0;font-family:Segoe UI,system-ui;background:linear-gradient(135deg,#1e3c72,#2a5298);color:#222}
-header{background:#000;color:#fff;padding:15px 20px;display:flex;justify-content:space-between;align-items:center}
-header button{background:#1e3c72;color:#fff;border:none;border-radius:8px;padding:8px 12px;font-size:14px;cursor:pointer}
+body{
+  margin:0;
+  font-family:Segoe UI,system-ui;
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  color:#222;
+}
+header{
+  background:#000;
+  color:#fff;
+  padding:15px 20px;
+  display:flex;
+  justify-content:space-between;
+}
 main{max-width:1400px;margin:auto;padding:20px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px}
-.card{background:#fff;border-radius:14px;padding:20px;box-shadow:0 10px 30px rgba(0,0,0,.25)}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+.card{
+  background:#fff;
+  border-radius:14px;
+  padding:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,.25);
+}
 h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
 .value{font-size:32px;font-weight:700;color:#d32f2f}
 .sub{font-size:13px;color:#555}
@@ -20,19 +40,30 @@ h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
 .orange{color:#ef6c00}
 input{width:100%;padding:10px;font-size:15px}
 .settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
-button{padding:12px 18px;font-size:15px;border-radius:10px;border:none;background:#1e3c72;color:#fff;cursor:pointer}
+button{
+  padding:12px 18px;
+  font-size:15px;
+  border-radius:10px;
+  border:none;
+  background:#1e3c72;
+  color:#fff;
+  cursor:pointer;
+}
 table{width:100%;border-collapse:collapse}
 th,td{padding:8px;text-align:center}
 th{background:#eee}
 </style>
 </head>
+
 <body>
+
 <header>
   <div id="clock"></div>
   <div>Attack FD 25 – Profi panel</div>
-  <button id="fsBtn">⛶ Fullscreen</button>
 </header>
+
 <main>
+
 <div class="grid">
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
@@ -45,147 +76,213 @@ th{background:#eee}
 </div>
 
 <br>
+
 <div class="card">
-  <h2>💰 Spotřeba uhlí</h2>
-  <div class="grid">
-    <div><div class="sub">HODINA</div><div class="value orange" id="kgHour">0 kg</div></div>
-    <div><div class="sub">DNES</div><div class="value green" id="kgDay">0 kg</div></div>
-    <div><div class="sub">MĚSÍC</div><div class="value blue" id="kgMonth">0 kg</div></div>
-    <div><div class="sub">CENA DNES</div><div class="value" id="costDay">0 Kč</div></div>
-    <div><div class="sub">CENA MĚSÍC</div><div class="value" id="costMonth">0 Kč</div></div>
-  </div>
+<h2>💰 Spotřeba uhlí</h2>
+<div class="grid">
+  <div><div class="sub">HODINA</div><div class="value orange" id="kgHour">0 kg</div></div>
+  <div><div class="sub">DNES</div><div class="value green" id="kgDay">0 kg</div></div>
+  <div><div class="sub">MĚSÍC</div><div class="value blue" id="kgMonth">0 kg</div></div>
+  <div><div class="sub">CENA DNES</div><div class="value" id="costDay">0 Kč</div></div>
+  <div><div class="sub">CENA MĚSÍC</div><div class="value" id="costMonth">0 Kč</div></div>
 </div>
 
 <br>
+<button id="historyBtn">📅 Denní historie spotřeby</button>
+</div>
+
+<div id="historyBox" class="card" style="display:none;margin-top:20px">
+  <h2>📊 Denní historie – uhlí & cena</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Datum</th>
+        <th>Spotřeba (kg)</th>
+        <th>Cena (Kč)</th>
+      </tr>
+    </thead>
+    <tbody id="historyTable"></tbody>
+  </table>
+</div>
+
+<br>
+
 <div class="card">
-  <h2>⚙️ Nastavení</h2>
-  <div class="settings">
-    <div>
-      <label>Kg uhlí / 10 min</label>
-      <input type="number" id="kg10min" step="0.1">
-    </div>
-    <div>
-      <label>Cena / kg</label>
-      <input type="number" id="priceKg" step="0.1">
-    </div>
+<h2>⚙️ Nastavení</h2>
+<div class="settings">
+  <div>
+    <label>Kg uhlí / 10 min</label>
+    <input type="number" id="kg10min" step="0.1">
   </div>
+  <div>
+    <label>Cena / kg</label>
+    <input type="number" id="priceKg" step="0.1">
+  </div>
+</div>
 </div>
 
 </main>
 
 <script>
 const CHANNEL = 231269;
-const ENERGY = 4.8;
+const ENERGY = 4.8; // kWh / kg
 const EFF = 0.75;
 
-// DOM Elements
-const kg10min = document.getElementById("kg10min");
-const priceKg = document.getElementById("priceKg");
-const clock = document.getElementById("clock");
-const fsBtn = document.getElementById("fsBtn");
-const tKotel = document.getElementById("tKotel");
-const tZpet = document.getElementById("tZpet");
-const deltaT = document.getElementById("deltaT");
-const tPodavac = document.getElementById("tPodavac");
-const tBojler = document.getElementById("tBojler");
-const tVenku = document.getElementById("tVenku");
-const feedTotal = document.getElementById("feedTotal");
-const kgHour = document.getElementById("kgHour");
-const powerKWbig = document.getElementById("powerKWbig");
-const kgDay = document.getElementById("kgDay");
-const kgMonth = document.getElementById("kgMonth");
-const costDay = document.getElementById("costDay");
-const costMonth = document.getElementById("costMonth");
-
-// Load settings
 kg10min.value = localStorage.kg10min || 2.5;
 priceKg.value = localStorage.priceKg || 6.2;
 
-// Clock
-function updateClock(){ clock.textContent = new Date().toLocaleString("cs-CZ"); }
-
-// Fullscreen
-function toggleFullscreen(){ 
-  if(!document.fullscreenElement){ document.documentElement.requestFullscreen(); } 
-  else { document.exitFullscreen(); } 
+function updateClock(){
+  clock.textContent = new Date().toLocaleString("cs-CZ");
 }
-fsBtn.onclick = toggleFullscreen;
-document.addEventListener("fullscreenchange", ()=>{ fsBtn.textContent = document.fullscreenElement ? "⛶ Ukončit" : "⛶ Fullscreen"; });
 
-// Convert seconds to hh:mm:ss
-function secToHMS(sec){ sec=Math.max(0,Math.floor(sec)); const h=Math.floor(sec/3600); const m=Math.floor((sec%3600)/60); const s=sec%60; return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`; }
-function secToKg(sec){ return Math.max(0,(sec/600)*(+kg10min.value||2.5)); }
+/* ===== FORMAT SEKUND NA HH:MM:SS ===== */
+function secToHMS(sec){
+  sec = Math.max(0, Math.floor(sec));
+  const h = Math.floor(sec / 3600);
+  const m = Math.floor((sec % 3600) / 60);
+  const s = sec % 60;
+  return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
+}
 
-// Fetch feeds helper
-async function fetchFeeds(params){
+function secToKg(sec){
+  return Math.max(0,(sec/600)*(+kg10min.value||2.5));
+}
+
+function todayStartISO(){
+  const d=new Date();
+  d.setHours(0,0,0,0);
+  return d.toISOString();
+}
+
+function monthStartISO(){
+  const d=new Date();
+  d.setDate(1);
+  d.setHours(0,0,0,0);
+  return d.toISOString();
+}
+
+async function fetchFeeds(p){
   try{
-    const r = await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${params}`);
-    const data = await r.json();
-    return data.feeds || [];
-  }catch{ return []; }
+    const r=await fetch(
+      `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
+    );
+    return (await r.json()).feeds || [];
+  }catch(e){
+    return [];
+  }
 }
 
-// Update current values
 async function updateCurrent(){
-  const feeds = await fetchFeeds("results=1");
-  if(feeds.length===0) return;
-  const f = feeds[0];
-  tKotel.textContent = (+f.field5||0).toFixed(1) + " °C";
-  tZpet.textContent = (+f.field1||0).toFixed(1) + " °C";
-  tPodavac.textContent = (+f.field2||0).toFixed(1) + " °C";
-  tBojler.textContent = (+f.field3||0).toFixed(1) + " °C";
-  tVenku.textContent = (+f.field4||0).toFixed(1) + " °C";
-  deltaT.textContent = ((+f.field5||0)-(+f.field1||0)).toFixed(1) + " °C";
-  feedTotal.textContent = secToHMS(+f.field8||0);
+  const cur=await fetchFeeds("results=1");
+  if(!cur.length) return;
+  const f=cur[0];
+
+  const tK=+f.field5||0;
+  const tZ=+f.field1||0;
+
+  tKotel.textContent=tK.toFixed(1)+" °C";
+  tZpet.textContent=tZ.toFixed(1)+" °C";
+  tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
+  tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
+  tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
+
+  deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
+
+  const totalSec = +f.field8 || 0;
+  feedTotal.textContent = secToHMS(totalSec);
 }
 
-// Hourly consumption
 async function updateHour(){
-  // poslední 2 feedy pro hodinu
-  const feeds = await fetchFeeds("results=2");
-  if(feeds.length===0){ kgHour.textContent="0 kg"; powerKWbig.textContent="0 kWh"; return; }
-  const sec1 = +(feeds[0].field8||0);
-  const sec2 = +(feeds[feeds.length-1].field8||0);
-  const kg = secToKg(sec2-sec1);
-  kgHour.textContent = kg.toFixed(2)+" kg";
-  powerKWbig.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
+  const feeds=await fetchFeeds("minutes=60&results=120");
+  if(feeds.length<2) return;
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgHour.textContent=kg.toFixed(2)+" kg";
+  powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
-// Daily consumption
 async function updateDay(){
-  const feeds = await fetchFeeds("results=100"); // posledních 100 feedů
-  if(feeds.length===0){ kgDay.textContent="0 kg"; costDay.textContent="0 Kč"; return; }
-  const secStart = +(feeds[0].field8||0);
-  const secEnd = +(feeds[feeds.length-1].field8||0);
-  const kg = secToKg(secEnd-secStart);
-  kgDay.textContent = kg.toFixed(2)+" kg";
-  costDay.textContent = (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+  const feeds=await fetchFeeds("start="+todayStartISO()+"&results=2000");
+  if(feeds.length<2) return;
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgDay.textContent=kg.toFixed(2)+" kg";
+  costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
-// Monthly consumption
 async function updateMonth(){
-  const feeds = await fetchFeeds("results=1000"); // posledních 1000 feedů
-  if(feeds.length===0){ kgMonth.textContent="0 kg"; costMonth.textContent="0 Kč"; return; }
-  const secStart = +(feeds[0].field8||0);
-  const secEnd = +(feeds[feeds.length-1].field8||0);
-  const kg = secToKg(secEnd-secStart);
-  kgMonth.textContent = kg.toFixed(0)+" kg";
-  costMonth.textContent = (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+  const feeds=await fetchFeeds("start="+monthStartISO()+"&results=3000");
+  if(feeds.length<2) return;
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgMonth.textContent=kg.toFixed(0)+" kg";
+  costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
-// Input handlers
-kg10min.oninput = ()=>{ localStorage.kg10min=kg10min.value; updateHour(); updateDay(); updateMonth(); }
-priceKg.oninput = ()=>{ localStorage.priceKg=priceKg.value; updateDay(); updateMonth(); }
+historyBtn.onclick = async () => {
+  historyBox.style.display =
+    historyBox.style.display === "none" ? "block" : "none";
 
-// Initial update
-updateClock(); updateCurrent(); updateHour(); updateDay(); updateMonth();
+  historyTable.innerHTML="";
+  const days=14;
+  const price=+priceKg.value||6.2;
 
-// Intervals
+  for(let i=0;i<days;i++){
+    const d1=new Date();
+    d1.setDate(d1.getDate()-i);
+    d1.setHours(0,0,0,0);
+    const d2=new Date(d1);
+    d2.setDate(d2.getDate()+1);
+
+    const feeds=await fetchFeeds(
+      `start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`
+    );
+
+    if(feeds.length>1){
+      const kg=secToKg(
+        feeds.at(-1).field8 - feeds[0].field8
+      );
+
+      historyTable.innerHTML+=`
+        <tr>
+          <td>${d1.toLocaleDateString("cs-CZ")}</td>
+          <td>${kg.toFixed(2)}</td>
+          <td>${(kg*price).toFixed(0)}</td>
+        </tr>`;
+    }
+  }
+};
+
+kg10min.oninput=()=>{
+  localStorage.kg10min=kg10min.value;
+  updateHour();updateDay();updateMonth();
+};
+priceKg.oninput=()=>{
+  localStorage.priceKg=priceKg.value;
+  updateDay();updateMonth();
+};
+
+updateClock();
+updateCurrent();
+updateHour();
+updateDay();
+updateMonth();
+
 setInterval(updateClock,1000);
 setInterval(updateCurrent,30000);
 setInterval(updateHour,300000);
 setInterval(updateDay,900000);
 setInterval(updateMonth,1800000);
 </script>
+
 </body>
 </html>
