--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@ button{
 table{width:100%;border-collapse:collapse}
 th,td{padding:8px;text-align:center}
 th{background:#eee}
+
+#footerLogo{
+  text-align:center;
+  margin-top:40px;
+  margin-bottom:20px;
+}
+#footerLogo img{
+  max-width:200px; /* nebo jakou velikost chceš */
+  width:50%;
+  height:auto;
+}
+  
 </style>
 </head>
 
@@ -150,6 +162,10 @@ th{background:#eee}
   </div>
 </div>
 </div>
+  <div id="footerLogo">
+  <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png" alt="Logo Elektroservis">
+</div>
+
 
 </main>
 
