--- a/index.html
+++ b/index.html
@@ -5,41 +5,88 @@
 <title>Kotelna – Attack FD 25</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- ===== STYLE ===== -->
 <style>
-*{box-sizing:border-box}
+*{box-sizing:border-box;margin:0;padding:0;font-family:Segoe UI,system-ui;}
 body{
-  margin:0;
-  font-family:Segoe UI,system-ui;
-  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  background: linear-gradient(135deg,#1e3c72,#2a5298);
   color:#222;
 }
 header{
-  background:#000;
-  color:#fff;
-  padding:15px 20px;
   display:flex;
   justify-content:space-between;
+  align-items:center;
+  background:#0d1a40;
+  color:#fff;
+  padding:15px 30px;
+  box-shadow:0 4px 12px rgba(0,0,0,.4);
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
 }
-main{max-width:1400px;margin:auto;padding:20px}
+header div{font-weight:600;}
+#fsBtn{
+  background:#ff9800;
+  border:none;
+  color:#fff;
+  font-size:18px;
+  padding:8px 14px;
+  border-radius:8px;
+  cursor:pointer;
+  transition:0.2s;
+}
+#fsBtn:hover{background:#e68900;}
+
+main{max-width:1400px;margin:30px auto;padding:0 20px;}
+
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:20px;
 }
+
 .card{
-  background:#fff;
-  border-radius:14px;
+  background:linear-gradient(145deg,#fff,#e0e0e0);
+  border-radius:16px;
   padding:20px;
-  box-shadow:0 10px 30px rgba(0,0,0,.25);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+  transition: transform 0.2s, box-shadow 0.2s;
 }
-h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
-.value{font-size:32px;font-weight:700;color:#d32f2f}
-.sub{font-size:13px;color:#555}
-.green{color:#2e7d32}
-.blue{color:#1565c0}
-.orange{color:#ef6c00}
-input{width:100%;padding:10px;font-size:15px}
-.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
+.card:hover{
+  transform: translateY(-5px);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.35);
+}
+
+h2{
+  margin-bottom:12px;
+  font-size:16px;
+  color:#1e3c72;
+}
+
+.value{
+  font-size:32px;
+  font-weight:700;
+  color:#d32f2f;
+}
+
+.sub{font-size:13px;color:#555;margin-bottom:4px;}
+.green{color:#2e7d32;}
+.blue{color:#1565c0;}
+.orange{color:#ef6c00;}
+
+input{
+  width:100%;
+  padding:10px;
+  font-size:15px;
+  border-radius:8px;
+  border:1px solid #ccc;
+  transition:0.2s;
+}
+input:focus{
+  border-color:#1e3c72;
+  outline:none;
+}
+
+.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px;margin-top:10px;}
 button{
   padding:12px 18px;
   font-size:15px;
@@ -48,49 +95,53 @@ button{
   background:#1e3c72;
   color:#fff;
   cursor:pointer;
+  transition:0.2s;
 }
-  #fsBtn{
-  background:#1e3c72;
-  border:none;
-  color:#fff;
-  font-size:18px;
-  padding:8px 14px;
-  border-radius:8px;
-  cursor:pointer;
-}
-#fsBtn:hover{
-  background:#16305c;
-}
+button:hover{background:#16305c;}
 
-table{width:100%;border-collapse:collapse}
-th,td{padding:8px;text-align:center}
-th{background:#eee}
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px;
+}
+th,td{
+  padding:10px;
+  text-align:center;
+  border-bottom:1px solid #ccc;
+}
+th{
+  background:#f0f0f0;
+}
 
 #footerLogo{
   text-align:center;
-  margin-top:40px;
-  margin-bottom:20px;
+  margin:40px 0 20px 0;
 }
 #footerLogo img{
-  max-width:500px; /* nebo jakou velikost chceš */
+  max-width:200px;
   width:50%;
   height:auto;
 }
-  
+
+:fullscreen .value{
+  font-size:42px;
+}
 </style>
 </head>
 
 <body>
 
+<!-- ===== HEADER ===== -->
 <header>
   <div id="clock"></div>
   <div>Attack FD 25 – Profi panel</div>
   <button id="fsBtn" title="Fullscreen">⛶</button>
 </header>
 
-
+<!-- ===== MAIN CONTENT ===== -->
 <main>
 
+<!-- --- KARTY --- -->
 <div class="grid">
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
@@ -102,8 +153,8 @@ th{background:#eee}
   <div class="card"><h2>⏱️ Podavač celkem</h2><div class="value" id="feedTotal">--</div></div>
 </div>
 
+<!-- --- SPOTŘEBA --- -->
 <br>
-
 <div class="card">
 <h2>💰 Spotřeba uhlí</h2>
 <div class="grid">
@@ -113,12 +164,12 @@ th{background:#eee}
   <div><div class="sub">CENA DNES</div><div class="value" id="costDay">0 Kč</div></div>
   <div><div class="sub">CENA MĚSÍC</div><div class="value" id="costMonth">0 Kč</div></div>
 </div>
-
 <br>
 <button id="historyBtn">📅 Denní historie spotřeby</button>
 <button id="monthHistoryBtn">📆 Měsíční historie spotřeby</button>
 </div>
 
+<!-- --- DENNÍ HISTORIE --- -->
 <div id="historyBox" class="card" style="display:none;margin-top:20px">
   <h2>📊 Denní historie – uhlí & cena</h2>
   <table>
@@ -133,6 +184,7 @@ th{background:#eee}
   </table>
 </div>
 
+<!-- --- MĚSÍČNÍ HISTORIE --- -->
 <div id="monthHistoryBox" class="card" style="display:none;margin-top:20px">
   <h2>📊 Měsíční historie – uhlí & cena</h2>
   <table>
@@ -147,8 +199,8 @@ th{background:#eee}
   </table>
 </div>
 
+<!-- --- NASTAVENÍ --- -->
 <br>
-
 <div class="card">
 <h2>⚙️ Nastavení</h2>
 <div class="settings">
@@ -162,103 +214,46 @@ th{background:#eee}
   </div>
 </div>
 </div>
-  <div id="footerLogo">
+
+<!-- --- LOGO --- -->
+<div id="footerLogo">
   <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png" alt="Logo Elektroservis">
 </div>
 
-
 </main>
 
+<!-- ===== SCRIPT ===== -->
 <script>
 const CHANNEL = 231269;
-const ENERGY = 4.8;
+const ENERGY = 4.8; // kWh / kg
 const EFF = 0.75;
 
 kg10min.value = localStorage.kg10min || 2.5;
 priceKg.value = localStorage.priceKg || 6.2;
 
-function updateClock(){
-  clock.textContent = new Date().toLocaleString("cs-CZ");
-}
+function updateClock(){ clock.textContent = new Date().toLocaleString("cs-CZ"); }
+function secToHMS(sec){ sec=Math.max(0,Math.floor(sec));const h=Math.floor(sec/3600);const m=Math.floor((sec%3600)/60);const s=sec%60; return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`; }
+function secToKg(sec){ return Math.max(0,(sec/600)*(+kg10min.value||2.5)); }
+function todayStartISO(){ const d=new Date();d.setHours(0,0,0,0);return d.toISOString(); }
+function monthStartISO(){ const d=new Date();d.setDate(1);d.setHours(0,0,0,0);return d.toISOString(); }
 
-function secToHMS(sec){
-  sec=Math.max(0,Math.floor(sec));
-  const h=Math.floor(sec/3600);
-  const m=Math.floor((sec%3600)/60);
-  const s=sec%60;
-  return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
-}
-
-function secToKg(sec){
-  return Math.max(0,(sec/600)*(+kg10min.value||2.5));
-}
-
-function todayStartISO(){
-  const d=new Date();d.setHours(0,0,0,0);return d.toISOString();
-}
-
-function monthStartISO(){
-  const d=new Date();d.setDate(1);d.setHours(0,0,0,0);return d.toISOString();
-}
-
-async function fetchFeeds(p){
-  try{
-    const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`);
-    return (await r.json()).feeds||[];
-  }catch(e){return[];}
-}
+async function fetchFeeds(p){ try{ const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`); return (await r.json()).feeds||[]; }catch(e){return[];} }
 
 async function updateCurrent(){
-  const cur=await fetchFeeds("results=1");
-  if(!cur.length)return;
-  const f=cur[0];
-  const tK=+f.field5||0;
-  const tZ=+f.field1||0;
-
+  const cur=await fetchFeeds("results=1"); if(!cur.length)return; const f=cur[0];
+  const tK=+f.field5||0; const tZ=+f.field1||0;
   tKotel.textContent=tK.toFixed(1)+" °C";
   tZpet.textContent=tZ.toFixed(1)+" °C";
   tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
   tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
   deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
-
-  const totalSec=+f.field8||0;
-  feedTotal.textContent=secToHMS(totalSec);
+  const totalSec=+f.field8||0; feedTotal.textContent=secToHMS(totalSec);
 }
 
-async function updateHour(){
-  const f=await fetchFeeds("minutes=60&results=120");
-  if(f.length<2)return;
-  const kg=secToKg(f.at(-1).field8-f[0].field8);
-  kgHour.textContent=kg.toFixed(2)+" kg";
-  powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
-}
-
-async function updateDay(){
-  const f=await fetchFeeds("start="+todayStartISO()+"&results=2000");
-  if(f.length<2)return;
-  const kg=secToKg(f.at(-1).field8-f[0].field8);
-  kgDay.textContent=kg.toFixed(2)+" kg";
-  costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
-}
-
-async function updateMonth(){
-  const f=await fetchFeeds("start="+monthStartISO()+"&results=3000");
-  if(f.length<2)return;
-  const kg=secToKg(f.at(-1).field8-f[0].field8);
-  kgMonth.textContent=kg.toFixed(0)+" kg";
-  costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
-}
-  fsBtn.onclick = () => {
-  if (!document.fullscreenElement) {
-    document.documentElement.requestFullscreen();
-    fsBtn.textContent = "⛶×";
-  } else {
-    document.exitFullscreen();
-    fsBtn.textContent = "⛶";
-  }
-};
-
+async function updateHour(){ const f=await fetchFeeds("minutes=60&results=120"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgHour.textContent=kg.toFixed(2)+" kg"; powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh"; }
+async function updateDay(){ const f=await fetchFeeds("start="+todayStartISO()+"&results=2000"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgDay.textContent=kg.toFixed(2)+" kg"; costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč"; }
+async function updateMonth(){ const f=await fetchFeeds("start="+monthStartISO()+"&results=3000"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgMonth.textContent=kg.toFixed(0)+" kg"; costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč"; }
 
 historyBtn.onclick=async()=>{
   historyBox.style.display=historyBox.style.display==="none"?"block":"none";
@@ -268,10 +263,8 @@ historyBtn.onclick=async()=>{
     const d1=new Date();d1.setDate(d1.getDate()-i);d1.setHours(0,0,0,0);
     const d2=new Date(d1);d2.setDate(d2.getDate()+1);
     const f=await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`);
-    if(f.length>1){
-      const kg=secToKg(f.at(-1).field8-f[0].field8);
-      historyTable.innerHTML+=`<tr><td>${d1.toLocaleDateString("cs-CZ")}</td><td>${kg.toFixed(2)}</td><td>${(kg*price).toFixed(0)}</td></tr>`;
-    }
+    if(f.length>1){ const kg=secToKg(f.at(-1).field8-f[0].field8);
+      historyTable.innerHTML+=`<tr><td>${d1.toLocaleDateString("cs-CZ")}</td><td>${kg.toFixed(2)}</td><td>${(kg*price).toFixed(0)}</td></tr>`; }
   }
 };
 
@@ -283,17 +276,20 @@ monthHistoryBtn.onclick=async()=>{
     const s=new Date();s.setMonth(s.getMonth()-i,1);s.setHours(0,0,0,0);
     const e=new Date(s);e.setMonth(e.getMonth()+1);
     const f=await fetchFeeds(`start=${s.toISOString()}&end=${e.toISOString()}&results=4000`);
-    if(f.length>1){
-      const kg=secToKg(f.at(-1).field8-f[0].field8);
-      monthHistoryTable.innerHTML+=`<tr><td>${s.toLocaleDateString("cs-CZ",{month:"long",year:"numeric"})}</td><td>${kg.toFixed(1)}</td><td>${(kg*price).toFixed(0)}</td></tr>`;
-    }
+    if(f.length>1){ const kg=secToKg(f.at(-1).field8-f[0].field8);
+      monthHistoryTable.innerHTML+=`<tr><td>${s.toLocaleDateString("cs-CZ",{month:"long",year:"numeric"})}</td><td>${kg.toFixed(1)}</td><td>${(kg*price).toFixed(0)}</td></tr>`; }
   }
 };
 
-kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
-priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
+kg10min.oninput=()=>{ localStorage.kg10min=kg10min.value; updateHour(); updateDay(); updateMonth(); }
+priceKg.oninput=()=>{ localStorage.priceKg=priceKg.value; updateDay(); updateMonth(); }
 
-updateClock();updateCurrent();updateHour();updateDay();updateMonth();
+fsBtn.onclick=()=>{
+  if(!document.fullscreenElement){ document.documentElement.requestFullscreen(); fsBtn.textContent="⛶×"; }
+  else{ document.exitFullscreen(); fsBtn.textContent="⛶"; }
+}
+
+updateClock(); updateCurrent(); updateHour(); updateDay(); updateMonth();
 setInterval(updateClock,1000);
 setInterval(updateCurrent,30000);
 setInterval(updateHour,300000);
