--- a/index.html
+++ b/index.html
@@ -171,36 +171,110 @@ th{
 </div>
 
 <!-- DENNÍ HISTORIE -->
-<div id="historyBox" class="card" style="display:none;margin-top:20px">
-  <h2>📊 Denní historie – uhlí & cena</h2>
-  <canvas id="dayChart" style="max-height:300px;"></canvas>
-  <table>
-    <thead>
-      <tr>
-        <th>Datum</th>
-        <th>Spotřeba (kg)</th>
-        <th>Cena (Kč)</th>
-      </tr>
-    </thead>
-    <tbody id="historyTable"></tbody>
-  </table>
-</div>
+historyBtn.onclick = async () => {
+  historyBox.style.display = historyBox.style.display === "none" ? "block" : "none";
+
+  const labels = [];
+  const dataKg = [];
+  const price = +priceKg.value || 6.2;
+
+  historyTable.innerHTML = "";
+
+  for (let i = 13; i >= 0; i--) {
+    const d1 = new Date();
+    d1.setDate(d1.getDate() - i);
+    d1.setHours(0, 0, 0, 0);
+    const d2 = new Date(d1);
+    d2.setDate(d2.getDate() + 1);
+
+    const feeds = await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`);
+
+    if (feeds.length > 1) {
+      const kg = secToKg(feeds.at(-1).field8 - feeds[0].field8);
+      const cost = (kg * price).toFixed(0);
+
+      // naplnění tabulky
+      historyTable.innerHTML += `
+        <tr>
+          <td>${d1.toLocaleDateString("cs-CZ",{day:"2-digit",month:"2-digit"})}</td>
+          <td>${kg.toFixed(1)}</td>
+          <td>${cost}</td>
+        </tr>
+      `;
+
+      // pro graf
+      labels.push(d1.toLocaleDateString("cs-CZ",{day:"2-digit",month:"2-digit"}));
+      dataKg.push(kg.toFixed(1));
+    }
+  }
+
+  // vykreslení grafu
+  if (dayChartInstance) dayChartInstance.destroy();
+  const ctx = document.getElementById('dayChart').getContext('2d');
+  dayChartInstance = new Chart(ctx, {
+    type: 'bar',
+    data: { labels: labels, datasets: [{ label: 'Spotřeba (kg)', data: dataKg, backgroundColor: '#1565c0' }] },
+    options: { responsive: true, plugins: { legend: { display: true } }, scales: { y: { beginAtZero: true } } }
+  });
+};
 
 <!-- MĚSÍČNÍ HISTORIE -->
-<div id="monthHistoryBox" class="card" style="display:none;margin-top:20px">
-  <h2>📊 Měsíční historie – uhlí & cena</h2>
-  <canvas id="monthChart" style="max-height:300px;"></canvas>
-  <table>
-    <thead>
-      <tr>
-        <th>Měsíc</th>
-        <th>Spotřeba (kg)</th>
-        <th>Cena (Kč)</th>
-      </tr>
-    </thead>
-    <tbody id="monthHistoryTable"></tbody>
-  </table>
-</div>
+monthHistoryBtn.onclick = async () => {
+  monthHistoryBox.style.display = monthHistoryBox.style.display === "none" ? "block" : "none";
+
+  const labels = [];
+  const dataKg = [];
+  const price = +priceKg.value || 6.2;
+
+  monthHistoryTable.innerHTML = "";
+
+  for (let i = 11; i >= 0; i--) {
+    const s = new Date();
+    s.setMonth(s.getMonth() - i, 1);
+    s.setHours(0, 0, 0, 0);
+    const e = new Date(s);
+    e.setMonth(s.getMonth() + 1);
+
+    const feeds = await fetchFeeds(`start=${s.toISOString()}&end=${e.toISOString()}&results=4000`);
+    if (feeds.length > 1) {
+      const kg = secToKg(feeds.at(-1).field8 - feeds[0].field8);
+      const cost = (kg * price).toFixed(0);
+
+      // naplnění tabulky
+      monthHistoryTable.innerHTML += `
+        <tr>
+          <td>${s.toLocaleDateString("cs-CZ",{month:"short",year:"2-digit"})}</td>
+          <td>${kg.toFixed(0)}</td>
+          <td>${cost}</td>
+        </tr>
+      `;
+
+      // pro graf
+      labels.push(s.toLocaleDateString("cs-CZ",{month:"short",year:"2-digit"}));
+      dataKg.push(kg.toFixed(0));
+    }
+  }
+
+  // vykreslení grafu
+  if (monthChartInstance) monthChartInstance.destroy();
+  const ctx = document.getElementById('monthChart').getContext('2d');
+  monthChartInstance = new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: labels,
+      datasets: [{
+        label: 'Spotřeba (kg)',
+        data: dataKg,
+        backgroundColor: 'rgba(46,125,50,0.2)',
+        borderColor: '#2e7d32',
+        fill: true,
+        tension: 0.3,
+        pointRadius: 5
+      }]
+    },
+    options: { responsive: true, plugins: { legend: { display: true } }, scales: { y: { beginAtZero: true } } }
+  });
+};
 
 
 <!-- --- NASTAVENÍ --- -->
